--- a/project_management_platform/pubspec.yaml
+++ b/project_management_platform/pubspec.yaml
@@ -57,6 +57,9 @@ dependencies:
   file_picker: ^8.1.7 # For file uploads
   intl: ^0.19.0
   dartz: ^0.10.1
+  fl_chart: ^1.1.1
+  path_provider: ^2.1.5
+  open_file: ^3.5.11
 
 dev_dependencies:
   flutter_test:
